// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Core: common.js EMPTY const foo = bar.exports 1`] = `Array []`;

exports[`Core: common.js EMPTY const foo = bar.exports.baz 1`] = `Array []`;

exports[`Core: common.js EMPTY const foo = derp.exports 1`] = `Array []`;

exports[`Core: common.js EMPTY foo.map(exports => exports.module) 1`] = `Array []`;

exports[`Core: common.js EMPTY foo.map(module => module.exports = bar) 1`] = `Array []`;

exports[`Core: common.js EMPTY let foo = { exports: 4} 1`] = `Array []`;

exports[`Core: common.js EMPTY module.other.exports = { exports } 1`] = `Array []`;

exports[`Core: common.js EMPTY module.other.exports = bar 1`] = `Array []`;

exports[`Core: common.js EMPTY module.other.exports.foo = { exports } 1`] = `Array []`;

exports[`Core: common.js EMPTY module.other.exports.foo = bar 1`] = `Array []`;

exports[`Core: common.js EMPTY some.exports = baz 1`] = `Array []`;

exports[`Core: common.js EMPTY some.exports.foo = { exports } 1`] = `Array []`;

exports[`Core: common.js EMPTY some.exports.foo = baz 1`] = `Array []`;

exports[`Core: common.js EMPTY some.module.exports = { exports } 1`] = `Array []`;

exports[`Core: common.js EMPTY some.module.exports = baz 1`] = `Array []`;

exports[`Core: common.js EMPTY some.module.exports.foo = { exports } 1`] = `Array []`;

exports[`Core: common.js EMPTY some.module.exports.foo = baz 1`] = `Array []`;

exports[`Core: common.js EMPTY some.module.other.exports = { exports } 1`] = `Array []`;

exports[`Core: common.js EMPTY some.module.other.exports = bar 1`] = `Array []`;

exports[`Core: common.js EMPTY some.module.other.exports.foo = { exports } 1`] = `Array []`;

exports[`Core: common.js EMPTY some.module.other.exports.foo = baz 1`] = `Array []`;

exports[`Core: common.js EMPTY some.other.exports = { exports } 1`] = `Array []`;

exports[`Core: common.js EMPTY some.other.exports = bar 1`] = `Array []`;

exports[`Core: common.js EMPTY some.other.exports.foo = { exports } 1`] = `Array []`;

exports[`Core: common.js EMPTY some.other.exports.foo = baz 1`] = `Array []`;

exports[`Core: common.js EMPTY var exports = 4 1`] = `Array []`;

exports[`Core: common.js OK (function () { module.exports = foo })() 1`] = `
Array [
  Object {
    "cjsExports_id": "default",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK exports = () => {} 1`] = `
Array [
  Object {
    "cjsExports_id": "default",
    "file_id": "__TEST__",
    "function_id": "anonymous@1:10",
  },
]
`;

exports[`Core: common.js OK exports = [] 1`] = `
Array [
  Object {
    "cjsExports_id": "default",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK exports = fn.apply() 1`] = `
Array [
  Object {
    "cjsExports_id": "default",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK exports = fn.call() 1`] = `
Array [
  Object {
    "cjsExports_id": "default",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK exports = foo() 1`] = `
Array [
  Object {
    "cjsExports_id": "default",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK exports = function () {} 1`] = `
Array [
  Object {
    "cjsExports_id": "default",
    "file_id": "__TEST__",
    "function_id": "anonymous@1:10",
  },
]
`;

exports[`Core: common.js OK exports = new Foo() 1`] = `
Array [
  Object {
    "cjsExports_id": "default",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK exports = new a.b.c.Foo() 1`] = `
Array [
  Object {
    "cjsExports_id": "default",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK exports.name = () => {} 1`] = `
Array [
  Object {
    "cjsExports_id": "name",
    "file_id": "__TEST__",
    "function_id": "anonymous@1:15",
  },
]
`;

exports[`Core: common.js OK exports.name = [] 1`] = `
Array [
  Object {
    "cjsExports_id": "name",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK exports.name = fn.apply() 1`] = `
Array [
  Object {
    "cjsExports_id": "name",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK exports.name = fn.call() 1`] = `
Array [
  Object {
    "cjsExports_id": "name",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK exports.name = foo() 1`] = `
Array [
  Object {
    "cjsExports_id": "name",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK exports.name = function () {} 1`] = `
Array [
  Object {
    "cjsExports_id": "name",
    "file_id": "__TEST__",
    "function_id": "anonymous@1:15",
  },
]
`;

exports[`Core: common.js OK module.exports = () => {} 1`] = `
Array [
  Object {
    "cjsExports_id": "default",
    "file_id": "__TEST__",
    "function_id": "anonymous@1:17",
  },
]
`;

exports[`Core: common.js OK module.exports = [] 1`] = `
Array [
  Object {
    "cjsExports_id": "default",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK module.exports = fn.apply() 1`] = `
Array [
  Object {
    "cjsExports_id": "default",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK module.exports = fn.call() 1`] = `
Array [
  Object {
    "cjsExports_id": "default",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK module.exports = foo() 1`] = `
Array [
  Object {
    "cjsExports_id": "default",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK module.exports = function () {} 1`] = `
Array [
  Object {
    "cjsExports_id": "default",
    "file_id": "__TEST__",
    "function_id": "anonymous@1:17",
  },
]
`;

exports[`Core: common.js OK module.exports = new Foo() 1`] = `
Array [
  Object {
    "cjsExports_id": "default",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK module.exports = new a.b.c.Foo() 1`] = `
Array [
  Object {
    "cjsExports_id": "default",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK module.exports.name = () => {} 1`] = `
Array [
  Object {
    "cjsExports_id": "name",
    "file_id": "__TEST__",
    "function_id": "anonymous@1:22",
  },
]
`;

exports[`Core: common.js OK module.exports.name = [] 1`] = `
Array [
  Object {
    "cjsExports_id": "name",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK module.exports.name = fn.apply() 1`] = `
Array [
  Object {
    "cjsExports_id": "name",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK module.exports.name = fn.call() 1`] = `
Array [
  Object {
    "cjsExports_id": "name",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK module.exports.name = foo() 1`] = `
Array [
  Object {
    "cjsExports_id": "name",
    "file_id": "__TEST__",
  },
]
`;

exports[`Core: common.js OK module.exports.name = function () {} 1`] = `
Array [
  Object {
    "cjsExports_id": "name",
    "file_id": "__TEST__",
    "function_id": "anonymous@1:22",
  },
]
`;
